fix: remove getFirts for java 17